--- a/src/sass/components/_statistics.scss
+++ b/src/sass/components/_statistics.scss
@@ -3,7 +3,7 @@
 	justify-content: center;
 	align-items: center;
 	flex-direction: column;
-	gap: 5.625em;
+	gap: 5.5em;
 
 	@media (min-width: $small-bp) {
 		flex-direction: row;
