--- a/src/sass/components/_users.scss
+++ b/src/sass/components/_users.scss
@@ -1,5 +1,5 @@
 .users {
-	padding-block: 6.5em 16.875em;
+	padding-block: 6.5em 17em;
 
 	@media (min-width: $small-bp) {
 		padding-block: clamp(7.25em, 15vw, 12em);
